--- a/clock.html
+++ b/clock.html
@@ -11,8 +11,8 @@
             
                 <div class="time" id="con">
                 <div class="icons">
-                    <i class="fas fa-moon"></i>
-                    <i class="fas fa-sun"></i>
+                <button id="bt1"><i class="fas fa-moon"></i></button>
+                 <button id="bt2"><i id='bt2' class="fas fa-sun"></i></button>
                 </div>
                 <div class="clock">
                     <div class="hour">
